package factory;

import product.CPU;

/**
 * @author yuanweimin
 * @date 19/05/13 10:02
 * @description 
 */
public abstract class CPUFactory {
    public abstract CPU createCPU();
}
