package product;

public class AMD extends CPU {
    @Override
    public void useCPU() {
        System.out.println("use AMD cpu ...");
    }
}
