package product;

/**
 * @author yuanweimin
 * @date 19/05/13 09:47
 * @description 
 */
public abstract class CPU {
    public abstract void useCPU();
}
