package product;

public class Inter extends CPU {
    @Override
    public void useCPU() {
        System.out.println("use Inter CPU ...");
    }
}
