@startuml
abstract class CPUFactory {
    + createCPU(): CPU
}
abstract class CPU {
    + useCPU(): void
}

class AMDFactory extends CPUFactory {
    + createCPU(): CPU
}
class InterFactory extends CPUFactory {
    + createCPU(): CPU
}

class AMD extends CPU {
    + useCPU(): void
}
class Inter extends CPU {
    + useCPU: void
}

AMD <.. AMDFactory
Inter <.. InterFactory
@enduml